fixed showcase overflow + updated ben 10

--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,7 @@ section.showcase {
   width: 100%;
   border-top: 5px solid white;
   border-bottom: 5px solid white;
+  overflow: hidden;
 }
 section.showcase > img {
   max-width: 1280px;
@@ -359,9 +360,35 @@ g#ben10-backdrop {
   div.info > p {
     max-width: 800px;
   }
+  section.showcase {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  section.showcase > img {
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
+  }
   section.showcase > div {
     width: 100%;
     padding-top: 56.25%;
     border: none;
+  }
+  div.gallery {
+    border-top: 5px solid white;
+  }
+  div.gallery > a {
+    width: 100%;
+    height: 360px;
+    margin: 0;
+    border: 0;
+  }
+  div.gallery > a:hover {
+    border: 0;
+  }
+  div.gallery > a > div:first-of-type {
+    width: 100%;
+    height: 360px;
+    background-size: cover;
+    background-position: center;
   }
 }
